<resources>
    <string name="app_name">myFood</string>
    <string name="myfood">myFood</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_amp_eat"><![CDATA[Order & Eat]]></string>
    <string name="find_your_food">Find Your Food</string>
    <string name="welcome_name">Hi Balmond</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="august_october">August - October</string>
    <string name="order_now">Order Now</string>
    <string name="main_continue">Continue</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
</resources>