<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtNameUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/welcome_name"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/orangetext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/order_amp_eat"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/txtNameUser"
                    app:layout_constraintTop_toBottomOf="@id/txtNameUser" />

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/profile"
                    app:layout_constraintStart_toEndOf="@id/txtNameUser"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtSearchBox"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext_bg"
                    android:hint="@string/find_your_food"
                    android:textStyle="italic"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/imgProfile"
                    app:layout_constraintStart_toStartOf="@id/txtOrder"
                    app:layout_constraintTop_toBottomOf="@id/txtOrder" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintBanner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/orange_light_banner"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtSearchBox">


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/image_banner"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtFreeDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/free_delivery"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="38dp"
                        android:text="@string/august_october"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/txtFreeDelivery" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="17dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/order_now"
                        android:textAlignment="center"
                        android:background="@drawable/orange_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>